--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,18 @@
-/bin
-/gen
+# built application files
+*.apk
+*.ap_
+
+# files for the dex VM
+*.dex
+
+# Java class files
+*.class
+
+# generated files
+bin/
+gen/
+.settings/
+
+# Local configuration file (sdk path, etc)
+local.properties
+/lint.xml
