--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,8 +5,10 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="8"
+        android:minSdkVersion="10"
         android:targetSdkVersion="15" />
+    <uses-permission android:name="android.permission.NFC" />
+    <uses-feature android:name="android.hardware.nfc" android:required="true" />
 
     <application
         android:icon="@drawable/ic_launcher"
@@ -48,6 +50,18 @@
         <activity
             android:name="com.study.tools.items.SpeechRecognizeActivity"
             android:label="@string/title_activity_speech_recognize" >
+        </activity>
+        <activity
+            android:name="com.study.tools.items.NfcReaderActivity"
+            android:label="@string/title_activity_nfc_reader"
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait" >
+            <intent-filter>
+                <action android:name="android.nfc.action.TECH_DISCOVERED" />
+            </intent-filter>
+            <meta-data
+                android:name="android.nfc.action.TECH_DISCOVERED"
+                android:resource="@xml/nfc_tech_filter" />
         </activity>
     </application>
 
