A demo for insert item to header and footer

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -94,6 +94,10 @@
             android:name="com.study.tools.items.WSActivity"
             android:label="@string/title_activity_ws" >
         </activity>
+        <activity
+            android:name="com.study.tools.items.ListInsertActivity"
+            android:label="@string/title_activity_list_insert" >
+        </activity>
     </application>
 
 </manifest>
